force-app/main/default/objects/Account/fields/DN_Orders__c.field-meta.xml
<CustomField>
    <fullName>DN_Orders__c</fullName>
    <label>DN-Orders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ITERO LAB</fullName>
            </value>
            <value>
                <fullName>ON AUTOSHIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>