force-app/main/default/objects/Account/fields/DN_Prosthetic_Dollars_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>DN_Prosthetic_Dollars_Gain_Loss__c</fullName>
    <formula>DN_Prosthetic_YTD_Manual_Rollup__c - DN_Prosthetic_PYTD_Manual_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DN-Prosthetic Dollars Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>