force-app/main/default/objects/Account/fields/DN_Surgical_Dollars_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>DN_Surgical_Dollars_Gain_Loss__c</fullName>
    <formula>DN_Surgical_YTD_Manual_Rollup__c - DN_Surgical_PYTD_Manual_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DN-Surgical Dollars Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>