force-app/main/default/objects/Account/fields/DN_Zimmer_Abutment_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>DN_Zimmer_Abutment_Total_Units__c</fullName>
    <description>Total Abutment units from related Sales History records</description>
    <inlineHelpText>Includes TEHA and traditional healing collars</inlineHelpText>
    <label>DN Zimmer Abutment Total Units</label>
    <summarizedField>Sales_History__c.DN_Zimmer_Abutment_Total_Units__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_History__c.TTM__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_History__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>