force-app/main/default/objects/Account/fields/Do_not_Delete__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Delete</label>
    <type>Checkbox</type>
</CustomField>