force-app/main/default/objects/Account/fields/DOLLARS_LOST__c.field-meta.xml
<CustomField>
    <fullName>DOLLARS_LOST__c</fullName>
    <formula>YTD_Total__c - Previous_Year_To_Date_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollars Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>