force-app/main/default/objects/Account/fields/Dry_Lab__c.field-meta.xml
<CustomField>
    <fullName>Dry_Lab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Lab</label>
    <type>Checkbox</type>
</CustomField>