force-app/main/default/objects/Account/fields/DSO1__c.field-meta.xml
<CustomField>
    <fullName>DSO1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>