force-app/main/default/objects/Account/fields/DSO_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>DSO_Parent_Account__c</fullName>
    <description>This field is to map the Parent (Billing address) DSO account to the (Shipping address) DSO account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DSO Parent Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>