force-app/main/default/objects/Account/fields/EDI__c.field-meta.xml
<CustomField>
    <fullName>EDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDI</label>
    <type>Checkbox</type>
</CustomField>