force-app/main/default/objects/Account/fields/EEL__c.field-meta.xml
<CustomField>
    <fullName>EEL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for the Dental DDSS team.</description>
    <inlineHelpText>Is this lab Encode Empowered?</inlineHelpText>
    <label>EEL</label>
    <type>Checkbox</type>
</CustomField>