force-app/main/default/objects/Account/fields/Effective_Date_832__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_832__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date (832)</label>
    <type>Date</type>
</CustomField>