force-app/main/default/objects/Account/fields/Effective_Date_850__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_850__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date (850)</label>
    <type>Date</type>
</CustomField>