force-app/main/default/objects/Account/fields/Electronic_810__c.field-meta.xml
<CustomField>
    <fullName>Electronic_810__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic (810)</label>
    <type>Checkbox</type>
</CustomField>