force-app/main/default/objects/Account/fields/Engr_School__c.field-meta.xml
<CustomField>
    <fullName>Engr_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engr School</label>
    <type>Checkbox</type>
</CustomField>