force-app/main/default/objects/Account/fields/Estimated_Implants_or_Restorations_YR__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Implants_or_Restorations_YR__c</fullName>
    <inlineHelpText>Estimated number of Implants per year.</inlineHelpText>
    <label># Implants per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>