force-app/main/default/objects/Account/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <description>surgeon specialize in the following procedures</description>
    <label>Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Supine</fullName>
            </value>
            <value>
                <fullName>CAS Hip</fullName>
            </value>
            <value>
                <fullName>DeNovo NT</fullName>
            </value>
            <value>
                <fullName>Fitmore</fullName>
            </value>
            <value>
                <fullName>Kinectiv</fullName>
            </value>
            <value>
                <fullName>LPS Flex Mobile</fullName>
            </value>
            <value>
                <fullName>NK ll Gender Flex</fullName>
            </value>
            <value>
                <fullName>Patient Specific</fullName>
            </value>
            <value>
                <fullName>PFJ/ZUK</fullName>
            </value>
            <value>
                <fullName>Revision Hip</fullName>
            </value>
            <value>
                <fullName>Revision Knee</fullName>
            </value>
            <value>
                <fullName>Hyaluronic Acid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>