force-app/main/default/objects/Account/fields/Expertise_Integration_purpose__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Integration_purpose__c</fullName>
    <label>Enterprise Integration purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Supine</fullName>
            </value>
            <value>
                <fullName>Partial Knee</fullName>
            </value>
            <value>
                <fullName>Patient Specific Instruments</fullName>
            </value>
            <value>
                <fullName>Vanguard</fullName>
            </value>
            <value>
                <fullName>VitaminE</fullName>
            </value>
            <value>
                <fullName>Vivacit-E Hip Construct</fullName>
            </value>
            <value>
                <fullName>XP</fullName>
            </value>
            <value>
                <fullName>Chondrofix</fullName>
            </value>
            <value>
                <fullName>Early Intervention</fullName>
            </value>
            <value>
                <fullName>Gel-One</fullName>
            </value>
            <value>
                <fullName>Persona Knee System</fullName>
            </value>
            <value>
                <fullName>PFJ</fullName>
            </value>
            <value>
                <fullName>Trabecular Metal Total Ankle</fullName>
            </value>
            <value>
                <fullName>Zimmer Unicompartmental Knee</fullName>
            </value>
            <value>
                <fullName>Oxford Partial Knee</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Signature Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>