force-app/main/default/objects/Account/fields/Expiration_Date_850__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_850__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date (850)</label>
    <type>Date</type>
</CustomField>