force-app/main/default/objects/Account/fields/F_A_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>F_A_Segmentation__c</fullName>
    <description>F&amp;A Segmentation for Direct Sales Force</description>
    <encryptionScheme>None</encryptionScheme>
    <label>F&amp;A Segmentation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>