force-app/main/default/objects/Account/fields/F_A_Surgeon_Score__c.field-meta.xml
<CustomField>
    <fullName>F_A_Surgeon_Score__c</fullName>
    <description>F&amp;A Surgeon Score for direct sales force</description>
    <label>F&amp;A Surgeon Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>