force-app/main/default/objects/Account/fields/Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>Facebook_URL__c</fullName>
    <description>URL to physician&apos;s Facebook profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL to physician&apos;s Facebook profile.</inlineHelpText>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>