force-app/main/default/objects/Account/fields/Feb_CY_PY__c.field-meta.xml
<CustomField>
    <fullName>Feb_CY_PY__c</fullName>
    <formula>CY02_Feb__c - PY02_FEB_LAST_YEAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feb CY-PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>