force-app/main/default/objects/Account/fields/Fellow_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Comments__c</fullName>
    <description>This is the Free text Field for Interest in International fellows Check Box is Checked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellow Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>