force-app/main/default/objects/Account/fields/Fellow_Program__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fellow Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Institutions</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Fellow Program)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>