force-app/main/default/objects/Account/fields/Fellow_Program_Text__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Program_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellowship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>