force-app/main/default/objects/Account/fields/Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Fellowship__c</fullName>
    <description>Name of the healthcare facility where surgeon did his/her Fellowship</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of healthcare facility where the surgeon completed their Fellowship</inlineHelpText>
    <label>Fellowship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>