force-app/main/default/objects/Account/fields/Fellowship_Account__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fellowship Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>012C0000000Q7KG</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Fellowship Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>