force-app/main/default/objects/Account/fields/Fellowship_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Completion_Date__c</fullName>
    <description>Date when the surgeon completed his/her Fellowship</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date this surgeon completed fellowship (mm/dd/yyyy)</inlineHelpText>
    <label>Fellowship Completion Date</label>
    <type>Date</type>
</CustomField>