force-app/main/default/objects/Account/fields/Fellowship_Focus__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Focus__c</fullName>
    <label>Fellowship Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adult Recon</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Lower Extremity</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Oncology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Tumor</fullName>
            </value>
            <value>
                <fullName>Upper Extremity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>