force-app/main/default/objects/Account/fields/Fellowship_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Y_N__c</fullName>
    <label>Fellowship (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>