force-app/main/default/objects/Account/fields/Fiscal_Day__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Day__c</fullName>
    <description>This is the number of days into the fiscal year as of today.</description>
    <formula>TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>