force-app/main/default/objects/Account/fields/FlagImplants_On__c.field-meta.xml
<CustomField>
    <fullName>FlagImplants_On__c</fullName>
    <description>Flags where Sales $ Have Occurred in Implants PYTD vs CYTD
For Formula in Trending</description>
    <formula>If (and( Implants_PYTD__c  =0, Implants_YTD__c =0), &quot;N&quot;,&quot;Y&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlagImplants$On</label>
    <type>Text</type>
</CustomField>