force-app/main/default/objects/Account/fields/FlagImplantsOn__c.field-meta.xml
<CustomField>
    <fullName>FlagImplantsOn__c</fullName>
    <formula>If (and(Implants_Units_PYtd__c =0,  Implants_Units_Ytd__c =0), &quot;N&quot;,&quot;Y&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlagImplantsOn</label>
    <type>Text</type>
</CustomField>