force-app/main/default/objects/Account/fields/FlagProsthetic_On__c.field-meta.xml
<CustomField>
    <fullName>FlagProsthetic_On__c</fullName>
    <description>Flags where Sales $ Have Occurred in Prosthetics PYTD vs CYTD
For Formula in Trending</description>
    <formula>If (and(  Prosthetic_PYTD__c   =0, Prosthetic_YTD__c =0), &quot;N&quot;,&quot;Y&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlagProsthetic$On</label>
    <type>Text</type>
</CustomField>