force-app/main/default/objects/Account/fields/FlagRegen_On__c.field-meta.xml
<CustomField>
    <fullName>FlagRegen_On__c</fullName>
    <description>Flags where Sales $ Have Occurred in Regen PYTD vs CYTD
For Formula in Trending</description>
    <formula>If (and(  Regen_PYTD__c   =0, Regen_YTD__c =0), &quot;N&quot;,&quot;Y&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlagRegen$On</label>
    <type>Text</type>
</CustomField>