force-app/main/default/objects/Account/fields/Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focus Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Focus Account)</relationshipLabel>
    <relationshipName>Focus_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>