force-app/main/default/objects/Account/fields/FPY_Implant_ASP__c.field-meta.xml
<CustomField>
    <fullName>FPY_Implant_ASP__c</fullName>
    <formula>DN_Implant_FPY_Manual_Rollup__c / DN_Implant_Units_FPY_Manual_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPY Implant ASP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>