force-app/main/default/objects/Account/fields/FPY_IMPLANTS_SWISS_PLUS__c.field-meta.xml
<CustomField>
    <fullName>FPY_IMPLANTS_SWISS_PLUS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Zimmer Cust No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>