force-app/main/default/objects/Account/fields/FPY_REPLACEMENT_DRILLS__c.field-meta.xml
<CustomField>
    <fullName>FPY_REPLACEMENT_DRILLS__c</fullName>
    <label>FPY REPLACEMENT DRILLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>