force-app/main/default/objects/Account/fields/Full_Arch_Solution__c.field-meta.xml
<CustomField>
    <fullName>Full_Arch_Solution__c</fullName>
    <inlineHelpText>Does this specialist offer full arch rehab? If so, what solution does he/she use?</inlineHelpText>
    <label>Full Arch Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DIEM</fullName>
            </value>
            <value>
                <fullName>Revitalize</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>