force-app/main/default/objects/Account/fields/Funnel__c.field-meta.xml
<CustomField>
    <fullName>Funnel__c</fullName>
    <description>This Picklist Value is added only to Germany Users</description>
    <label>Funnel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIP30%TSV/T/ ZOP</fullName>
            </value>
            <value>
                <fullName>VIP60%TSV/T/ ZOP</fullName>
            </value>
            <value>
                <fullName>VIP30% TM</fullName>
            </value>
            <value>
                <fullName>VIP60% TM</fullName>
            </value>
            <value>
                <fullName>VIP30%CadCam</fullName>
            </value>
            <value>
                <fullName>VIP60%CadCam</fullName>
            </value>
            <value>
                <fullName>VIP30%Regen</fullName>
            </value>
            <value>
                <fullName>VIP60%Regen</fullName>
            </value>
            <value>
                <fullName>VIP KALT</fullName>
            </value>
            <value>
                <fullName>VIP KALT BESUCHT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>