force-app/main/default/objects/Account/fields/Future_Distributorship__c.field-meta.xml
<CustomField>
    <fullName>Future_Distributorship__c</fullName>
    <formula>Account_Future_Practice__r.Distributor_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Distributorship</label>
    <type>Text</type>
</CustomField>