force-app/main/default/objects/Account/fields/Future_Employment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Future_Employment_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Future Employment Comments</label>
    <type>TextArea</type>
</CustomField>