force-app/main/default/objects/Account/fields/Future_Location_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Future_Location_Preferences__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Future Distributorship</label>
    <type>TextArea</type>
</CustomField>